# virtual-casing

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml  wheel.yml
cmake/: FindFFTW.cmake
include/: virtual-casing-test-data.hpp  virtual-casing.h  virtual-casing.hpp  virtual-casing.txx
src/: magneto-static-routs.f90  python.cpp  surf_routs.f90  virtual-casing.cpp
test/: axisymm.cpp  test.py  test_virtual_casing_sphere.f90  test_virtual_casing_sphere.make  virtual-casing-c.c  virtual-casing.cpp
