[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.16",
    "pybind11-stubgen>=2.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_casing"
version = "0.1.0"
description = "Python Wrapper for Virtual Casing"
authors = [
    {name = "Dhairya Malhotra, Manas Rachh, Bharat Medasani", email = "mbkumar@gmail.com"}
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pybind11-stubgen>=2.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["virtual_casing-stubs*"]

[tool.setuptools.package-data]
"virtual_casing-stubs" = ["*.pyi", "**/*.pyi"]
