[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "virtual_casing"
# version = "0.1.3"
description = "Python Wrapper for Virtual Casing"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [
    {name = "Dhairya Malhotra"},
    {name = "Manas Rachh"},
    {name = "Bharat Medasani", email = "mbkumar@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[project.optional-dependencies]
test = ["pytest>=6.0"]
dev = ["pybind11-stubgen>=2.5", "pytest"]

[project.urls]
Repository = "https://github.com/hiddenSymmetries/virtual-casing"
